refactor: atualizando métodos e add modal para edição

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -80,6 +80,18 @@
                 <span class="coverage-count">(1/2)</span>
             </td>
         </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/EditModalComponent.html">src/app/edit-modal/edit-modal.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>EditModalComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
@@ -104,6 +116,18 @@
                 <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TodoItemComponent.html">src/app/todo-item/todo-item.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TodoItemComponent</td>
+            <td align="right" data-sort="14">
+                <span class="coverage-percent">14 %</span>
+                <span class="coverage-count">(2/14)</span>
+            </td>
+        </tr>
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
@@ -111,9 +135,9 @@
             </td>
             <td>component</td>
             <td>TodosComponent</td>
-            <td align="right" data-sort="61">
-                <span class="coverage-percent">61 %</span>
-                <span class="coverage-count">(8/13)</span>
+            <td align="right" data-sort="72">
+                <span class="coverage-percent">72 %</span>
+                <span class="coverage-count">(8/11)</span>
             </td>
         </tr>
         <tr class="low">
