--- a/documentation/properties.html
+++ b/documentation/properties.html
@@ -58,7 +58,7 @@
         <li>
             <b>License</b> : MIT</li>
         <li>
-            <b>Repository</b> : my repository</li>
+            <b>Repository</b> : https://github.com/Maryucha/TodoAngular</li>
         <li>
             <b>Author</b> : Maryucha M. Mariani</li>
     </ul>
